--- a/week13/store_data_fajrulking/pubspec.yaml
+++ b/week13/store_data_fajrulking/pubspec.yaml
@@ -16,9 +16,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^5.0.0
-
 flutter:
   uses-material-design: true
 
   assets:
-    - assets/
+    - assets/pizzalist.json
